Source/WebCore/platform/graphics/cg/ImageBufferCGBitmapBackend.cpp
@@ -103,7 +103,6 @@ ImageBufferCGBitmapBackend::ImageBufferCGBitmapBackend(const Parameters& paramet
     ASSERT(m_dataProvider);
     m_context = WTFMove(context);
     ASSERT(m_context);
-    applyBaseTransform(*m_context);
 }
 
 ImageBufferCGBitmapBackend::~ImageBufferCGBitmapBackend() = default;
